--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>hola mundo</h1>
+<div class="d-flex fullScreen">
+  <!-- Sidebar -->
+  <shared-sidebar></shared-sidebar>
+  <!-- Home Page -->
+</div>
