--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,6 +6,7 @@
     *ngFor="let tag of tagsHistoy; let isFirst = first"
   >
     <button
+      (click)="searchTag(tag)"
       class="list-group-item list-group-item-action"
       [ngClass]="{ 'mt-1': !isFirst }"
     >
